--- a/Valtrook/Valtrook/Valtrook.vcxproj
+++ b/Valtrook/Valtrook/Valtrook.vcxproj
@@ -134,9 +134,13 @@
     <ClCompile Include="FileWriter.cpp" />
     <ClCompile Include="GLTexture.cpp" />
     <ClCompile Include="GUIBase.cpp" />
+    <ClCompile Include="GUIFrame.cpp" />
+    <ClCompile Include="GUIWindow.cpp" />
     <ClCompile Include="GUI_HorizontalBox.cpp" />
     <ClCompile Include="GUI_Image.cpp" />
     <ClCompile Include="GUI_Label.cpp" />
+    <ClCompile Include="GUI_Padding.cpp" />
+    <ClCompile Include="GUI_Table.cpp" />
     <ClCompile Include="GUI_VerticalBox.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="JsonReadWriter.cpp" />
@@ -188,9 +192,14 @@
     <ClInclude Include="GLTexture.h" />
     <ClInclude Include="Glyph.h" />
     <ClInclude Include="GUIBase.h" />
+    <ClInclude Include="GUI.hpp" />
+    <ClInclude Include="GUIFrame.h" />
+    <ClInclude Include="GUIWindow.h" />
     <ClInclude Include="GUI_HorizontalBox.h" />
     <ClInclude Include="GUI_Image.h" />
     <ClInclude Include="GUI_Label.h" />
+    <ClInclude Include="GUI_Padding.h" />
+    <ClInclude Include="GUI_Table.h" />
     <ClInclude Include="GUI_VerticalBox.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="json.hpp" />
