--- a/Valtrook/Valtrook/Valtrook.vcxproj
+++ b/Valtrook/Valtrook/Valtrook.vcxproj
@@ -98,6 +98,9 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <InlineFunctionExpansion>Default</InlineFunctionExpansion>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
+      <OmitFramePointers>true</OmitFramePointers>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -156,6 +159,8 @@
     <ClCompile Include="ResourceLocation.cpp" />
     <ClCompile Include="RuntimeConstants.cpp" />
     <ClCompile Include="ShaderObject.cpp" />
+    <ClCompile Include="SimpleRectangle.cpp" />
+    <ClCompile Include="SimpleTextRectangle.cpp" />
     <ClCompile Include="SimplexNoise.cpp" />
     <ClCompile Include="SplashState.cpp" />
     <ClCompile Include="TextRectangle.cpp" />
@@ -218,10 +223,13 @@
     <ClInclude Include="ProportionList.h" />
     <ClInclude Include="Random.h" />
     <ClInclude Include="Rectangle.h" />
+    <ClInclude Include="Rectangles.hpp" />
     <ClInclude Include="RenderingEngine.h" />
     <ClInclude Include="ResourceLocation.h" />
     <ClInclude Include="RuntimeConstants.h" />
     <ClInclude Include="ShaderObject.h" />
+    <ClInclude Include="SimpleRectangle.h" />
+    <ClInclude Include="SimpleTextRectangle.h" />
     <ClInclude Include="SimplexNoise.h" />
     <ClInclude Include="SplashState.h" />
     <ClInclude Include="StopWatch.h" />
