--- a/Valtrook/Valtrook/Valtrook.vcxproj
+++ b/Valtrook/Valtrook/Valtrook.vcxproj
@@ -281,6 +281,7 @@
     <ClInclude Include="TimingType.h" />
     <ClInclude Include="TransitionState.h" />
     <ClInclude Include="UV.h" />
+    <ClInclude Include="VariableStore.h" />
     <ClInclude Include="VBO.h" />
     <ClInclude Include="VBOBatcher.h" />
     <ClInclude Include="Vertex.h" />
